<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="_1244567">1244567</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clr">CLR</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="plus">+</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="blank">""</string>
    <string name="dot">.</string>
</resources>