<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3D3D3"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="end|bottom"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="end|bottom"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="48sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_7"
                android:onClick="onDigit"
                android:textColor="@color/white"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_8"
                android:onClick="onDigit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_9"
                android:onClick="onDigit"
                android:textColor="@color/white"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onOperator"
                android:background="@color/darkGray"
                android:text="@string/div"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:onClick="onDigit">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_4"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_6"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/mul"
                android:textColor="@color/white"
                android:onClick="onOperator" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="1"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_2"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/minus"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onOperator" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/_0"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onDigit" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/dot"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onDecimalPoint" />


            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/plus"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onOperator" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@color/darkGray"
                android:text="@string/equal"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onEqual" />
            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/clr"
                android:textColor="@color/white"
                app:cornerRadius="0dp"
                android:onClick="onClear" />



        </LinearLayout>


    </LinearLayout>





</LinearLayout>